--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
+  <title>Hike the Whites</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you.">
 
@@ -21,7 +21,7 @@
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
+        <div class="site-header__logo__graphic icon icon--clear-view-escapes">Hike the Whites</div>
       </div>
       
       <div class="site-header__menu-icon">
@@ -30,7 +30,7 @@
 
       <div class="site-header__menu-content">
         <div class="site-header__btn-container">
-          <a href="#" class="btn open-modal">Get in Touch</a>
+          <a href="#" class="btn open-modal">Get Started</a>
         </div>
         <nav class="primary-nav primary-nav--pull-right">
           <ul>
@@ -46,17 +46,17 @@
   <div class="large-hero">
     
     <picture>
-      <source srcset="assets/images/hero--large.jpg 1920w, assets/images/hero--large-hi-dpi.jpg 3840w" media="(min-width: 1380px)">
-      <source srcset="assets/images/hero--medium.jpg 1380w, assets/images/hero--medium-hi-dpi.jpg 2760w" media="(min-width: 990px)">
-      <source srcset="assets/images/hero--small.jpg 990w, assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width: 640px)">
-      <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="Coastal view of ocean and mountains" class="large-hero__image">
+      <source srcset="assets/images/hero--large.jpg 1920w" media="(min-width: 1380px)">
+      <source srcset="assets/images/hero--medium.jpg 1380w" media="(min-width: 990px)">
+      <source srcset="assets/images/hero--small.jpg 990w" media="(min-width: 640px)">
+      <img srcset="assets/images/hero--smaller.jpg 640w" alt="Coastal view of ocean and mountains" class="large-hero__image">
     </picture>
 
     <div class="large-hero__text-content">
       <div class="wrapper">
         <h1 class="large-hero__title">Hike the Whites</h1>
         <h2 class="large-hero__subtitle">One trip away.</h2>
-        <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
+        <p class="large-hero__description">Discover a world above the hills in New Hampshire</p>
         <p><a href="#" class="btn btn--orange btn--large open-modal">Get Started Today</a></p>
       </div>
     </div>
@@ -68,15 +68,15 @@
       <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
 
       <div class="wrapper wrapper--medium wrapper--b-margin">
-        <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w, assets/images/first-trip-hi-dpi.jpg 1952w" alt="Couple walking down a street.">
+        <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w" alt="Couple walking down a street.">
       </div>
 
       <div class="row row--gutters">
         <div class="row__medium-4 row__medium-4--larger row__b-margin-until-medium">
           <picture>
-            <source sizes="404px" data-srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)">
-            <source sizes="320px" data-srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-hi-dpi.jpg 764w" media="(min-width: 800px)">
-            <img class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder, Jane Doe">
+            <source sizes="404px" data-srcset="assets/images/our-start.jpg 404w" media="(min-width: 1020px)">
+            <source sizes="320px" data-srcset="assets/images/our-start-portrait.jpg 382w" media="(min-width: 800px)">
+            <img class="lazyload" data-srcset="assets/images/our-start-landscape.jpg 800w" alt="Our founder, Jane Doe">
           </picture>
         </div>
         <div class="row__medium-8 row__medium-8--smaller">
@@ -138,10 +138,10 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w, assets/images/testimonial-jane-hi-dpi.jpg 320w" alt="Jane Doe">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-jane.jpg 160w" alt="Jane Doe">
             </div>
-            <h3 class="testimonial__title">Jane Doe</h3>
-            <h4 class="testimonial__subtitle">9 Time Escaper</h4>
+            <h3 class="testimonial__title">Waterfalls</h3>
+            <h4 class="testimonial__subtitle">Arathusa Falls</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
           </div>
         </div>
@@ -149,10 +149,10 @@
         <div class="row__large-4">
           <div class="testimonial">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w, assets/images/testimonial-john-hi-dpi.jpg 320w" alt="John Smith">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-john.jpg 160w" alt="John Smith">
             </div>
-            <h3 class="testimonial__title">John Smith</h3>
-            <h4 class="testimonial__subtitle">4 Time Escaper</h4>
+            <h3 class="testimonial__title">4000 Footers</h3>
+            <h4 class="testimonial__subtitle">Predidential Range</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
           </div>
         </div>
@@ -160,10 +160,10 @@
         <div class="row__large-4">
           <div class="testimonial testimonial--last">
             <div class="testimonial__photo">
-              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w, assets/images/testimonial-cat-hi-dpi.jpg 320w" alt="Cat McKitty">
+              <img class="lazyload" sizes="160px" data-srcset="assets/images/testimonial-cat.jpg 160w" alt="Cat McKitty">
             </div>
-            <h3 class="testimonial__title">Cat McKitty</h3>
-            <h4 class="testimonial__subtitle">6 Time Escaper</h4>
+            <h3 class="testimonial__title">Aha Moments</h3>
+            <h4 class="testimonial__subtitle">At the Top</h4>
             <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
           </div>
         </div>
