--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,7 @@
 
   <div id="testimonials" class="page-section page-section--no-b-padding-until-large page-section--testimonials lazyload" data-matching-link="#testimonials-link">
     <div class="wrapper wrapper--no-padding-until-large">
-      <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Real <strong>Testimonials</strong></h2>
+      <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span> Find <strong>Your Spot</strong></h2>
 
       <div class="row row--gutters row--equal-height-at-large row--gutters-small row--t-padding generic-content-container">
         <div class="row__large-4">
