--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' >
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet" type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Chelsea+Market|Permanent+Marker" rel="stylesheet">
   <title>Hike the Whites</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
   <meta name="description" content="Your clarify. One trip away. We create soul restoring journeys that inspire you to be you.">
@@ -64,8 +66,8 @@
 
   <div id="our-beginning" class="page-section" data-matching-link="#our-beginning-link">
     <div class="wrapper">
-      <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was our own.</strong></h2>
-      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been working to make travel <strong>better for everyone.</strong></h3>
+      <h2 class="headline headline--centered headline--light headline--b-margin-small">The first trip we planned <strong>was spectacular.</strong></h2>
+      <h3 class="headline headline--centered headline--orange headline--small headline--narrow headline--light headline--b-margin-large">Ever since, we&rsquo;ve been going back <strong>again and again.</strong></h3>
 
       <div class="wrapper wrapper--medium wrapper--b-margin">
         <img class="lazyload" sizes="(min-width: 970px) 976px, 100vw" data-srcset="assets/images/first-trip-low-res.jpg 565w, assets/images/first-trip.jpg 976w" alt="Couple walking down a street.">
@@ -81,10 +83,10 @@
         </div>
         <div class="row__medium-8 row__medium-8--smaller">
           <div class="generic-content-container">
-            <h2 class="headline headline--no-t-margin">Here&rsquo;s how we got started&hellip;</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
+            <h2 class="headline headline--no-t-margin">Here is where we are going.</h2>
+            <p>Most of the area is public land, including the White Mountain National Forest and a number of state parks. Its most famous mountain is 6,288-foot (1,917 m) Mount Washington, which is the highest peak in the Northeastern U.S. and which held the record for fastest surface wind gust (231 miles per hour (372 km/h), over 100 m/s, in 1934) in the world for 76 years. Mount Washington is part of a line of summits, the Presidential Range, that are named after U.S. presidents and other prominent Americans.</p>
+            <p>The White Mountains also include the Franconia Range, Sandwich Range, Carter-Moriah Range and Kinsman Range in New Hampshire, and the Mahoosuc Range straddling the border between it and Maine. In all, there are 48 peaks within New Hampshire as well as one (Old Speck Mountain) in Maine over 4,000 feet (1,200 m), known as the Four-thousand footers.</p>
+            <p>The Whites are known for a system of alpine huts for hikers operated by the Appalachian Mountain Club. The Appalachian Trail crosses the area from southwest to northeast.</p>
           </div>
         </div>
       </div>
@@ -142,7 +144,7 @@
             </div>
             <h3 class="testimonial__title">Waterfalls</h3>
             <h4 class="testimonial__subtitle">Arathusa Falls</h4>
-            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+            <p>Arethusa Falls is perhaps our favorite waterfall in the White Mountain area (though we also liked Crystal Cascade almost as much), and it might quite possibly be our favorite waterfall in the New England area so far. The falls was tall at a reported 160ft tall though it was conceivable that it could be as tall as 200ft or as short as 125ft.</p>
           </div>
         </div>
 
@@ -153,7 +155,7 @@
             </div>
             <h3 class="testimonial__title">4000 Footers</h3>
             <h4 class="testimonial__subtitle">Predidential Range</h4>
-            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+            <p>The state of New Hampshire has forty-eight 4,000 footer mountains (mostly in the White Mountains) listed below in order of highest elevation to lowest elevation. A 4,000 footer is a mountain that has an elevation of at least 4,000 feet and a minimum of 200 feet prominence. All criteria is determined by the Appalachian Mountain Club (AMC).</p>
           </div>
         </div>
 
@@ -164,7 +166,7 @@
             </div>
             <h3 class="testimonial__title">Aha Moments</h3>
             <h4 class="testimonial__subtitle">At the Top</h4>
-            <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
+            <p>I started climbing Mt.Osceola on a beautiful sunny day, and the lower forests were spectacular that day. By the time I hit the summit, things had changed and the rains had come. Nonetheless, it was good to linger for a while and soak in the view. Check it off the list. </p>
           </div>
         </div>
       </div>
@@ -173,7 +175,7 @@
 
   <footer class="site-footer">
     <div class="wrapper">
-      <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
+      <p><span class="site-footer__text">Copyright &copy; 2016 </span> <a href="#" class="btn btn--orange open-modal">Get in Touch</a></p>
     </div>
   </footer>
 
